--- a/src/app/project/add-project/add-project.component.css
+++ b/src/app/project/add-project/add-project.component.css
@@ -4,8 +4,20 @@
 
 .row-right {
     text-align: right;
+    padding-right: 2%;
 }
 
 .checkbox-padding {
     padding-left: 5px;
+}
+
+.middleVert {
+    padding-top: 7%;
+}
+.middleVert1 {
+    height: 20px;
+}
+
+.text-danger {
+    color: red;
 }
