--- a/src/app/task/add-task/add-task.component.html
+++ b/src/app/task/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -81,10 +81,10 @@
                                         </button>
                                     </span>
                                 </div>
-                                <!-- <div class="btnGroup">
+                                <div class="btnGroup">
                                                                 <button class="button" type="submit" [disabled]="myForm.controls.myDate.errors">Submit</button>
                                                                 <p class="error" *ngIf="myForm.controls.myDate.errors">Date is required!</p>
-                                                            </div> -->
+                                                            </div> 
                             </form>
                         </div>
                     </div>
@@ -139,4 +139,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
