--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -1,4 +1,4 @@
-<p-growl [(value)]="msgs"></p-growl>
+<p-growl [(value)]="msgs" [life]="3000" [sticky]="false"></p-growl>
 <div class="container">
     <div class="row">
         <form #f="ngForm" novalidate (ngSubmit)="onSave(f.value, f.valid)">
@@ -13,7 +13,7 @@
                         <div class="form-group col-md-6">
                             <label class="control-label col-sm-4" for="firstName">First Name:</label>
                             <div class="col-sm-8">
-                                <input class="form-control first_Name" id="firstName" [(ngModel)]="currentUser.first_Name" name="firstName" #firstName="ngModel" required
+                                <input class="form-control first_Name" id="firstName" [(ngModel)]="currentUser.First_Name" name="firstName" #firstName="ngModel" required
                                     placeholder="Enter first name">
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                         <div class="form-group col-md-6">
                             <label class="control-label col-sm-4" for="lastName">Last Name:</label>
                             <div class="col-sm-8">
-                                <input class="form-control" id="lastName" [(ngModel)]="currentUser.last_Name" placeholder="Enter last name" name="lastName"
+                                <input class="form-control" id="lastName" [(ngModel)]="currentUser.Last_Name" placeholder="Enter last name" name="lastName"
                                     #lastName="ngModel" required>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                         <div class="form-group col-md-6">
                             <label class="control-label col-sm-4" for="empId">Employee ID:</label>
                             <div class="col-sm-8">
-                                <input class="form-control" id="empId" [(ngModel)]="currentUser.employee_ID" name="empId" placeholder="Enter employee id"
+                                <input class="form-control" id="empId" [(ngModel)]="currentUser.Employee_ID" name="empId" placeholder="Enter employee id"
                                     #empId="ngModel" required>
                             </div>
                         </div>
@@ -90,9 +90,9 @@
                     <div class="col-md-10">
 
                         <p-dataTable [value]="userList">
-                            <p-column field="first_Name" header="First Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
-                            <p-column field="last_Name" header="Last Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
-                            <p-column field="employee_ID" header="Employee ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="First_Name" header="First Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Last_Name" header="Last Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Employee_ID" header="Employee ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
                             <p-column>
 
                                 <ng-template let-user="rowData" pTemplate="body">
@@ -116,4 +116,4 @@
             </div>
         </div>
     </div>
-    <p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425" ></p-confirmDialog>
+    <p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425" #cd ></p-confirmDialog>
