--- a/src/app/task/add-task/add-task.component.html
+++ b/src/app/task/add-task/add-task.component.html
@@ -1,19 +1,21 @@
-<!-- <div class="container">
+<p-growl [(value)]="msgs" [life]="3000" [sticky]="false"></p-growl>
+<div class="container">
     <div class="row">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Add Task</h3>
+                <h3 class="panel-title">{{formMode}}</h3>
             </div>
             <div class="panel-body">
+                <form [formGroup]="addTaskForm" (ngSubmit)="addTaskSubmit()" novalidate>
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="empId">Project:</label>
                         <div class="col-sm-6">
-                            <input class="form-control" id="project" placeholder="Select the Project" [disabled]="true">
+                            <input class="form-control" id="project" placeholder="Select the Project" readonly value="{{selectedProject}}" formControlName="ProjectIdControl">
                         </div>
                         <div class="col-sm-2">
-                            <button type="button" class="btn btn-primary">Search</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" [disabled]="formMode === 'Edit Task'" data-target="#searchProjectsModal">Search</button>
                         </div>
                     </div>
                     <div class="col-md-3"></div>
@@ -23,7 +25,7 @@
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="task">Task:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="task" placeholder="Enter task name">
+                            <input class="form-control" id="task" placeholder="Enter task name" formControlName="TaskNameControl">
                         </div>
                     </div>
                     <div class="col-md-3"></div>
@@ -33,110 +35,222 @@
                     <div class="col-md-6">
                         <div class="checkbox checkbox-padding">
                             <label>
-                                <input type="checkbox" value="">Parent Task</label>
+                                <input type="checkbox" value="" name="IsParentTaskControl" (change)="handleChange($event)" formControlName="IsParentTaskControl">Parent Task</label>
                         </div>
                     </div>
                     <div class="col-md-1"></div>
                 </div>
-                <div class="row">
+           
+
+                <div class="row" *ngIf="addTaskForm.controls.IsParentTaskControl.value !== true">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
-                        <label class="control-label col-sm-4" for="lastName">Priority:</label>
+                        <label class="control-label col-sm-4">Priority:</label>
                         <div class="col-sm-8">
-                            <ion-range-slider #sliderElement type="single" [min]="0" max="30" grid="true" grid_num="3" prefix="Priority: " (onUpdate)="myOnUpdate($event)"
-                                (onChange)="myOnChange($event)" (onFinish)="myOnFinish($event)">
-                            </ion-range-slider>
+                            <div class="row">
+                                <div class="col-sm-1">
+                                    <h4 class="middleVert1">0</h4>
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="middleVert"></div>
+                                    <p-slider formControlName="PriorityControl" [min]="0" [max]="30" [step]="1" [style]="{'width':'200px'}"></p-slider>
+                                </div>
+                                <div class="col-sm-1">
+                                    <h4 class="middleVert1">30</h4>
+                                </div>
+                                <div class="col-sm-3">
+                                    <input class="form-control" readonly formControlName="PriorityDisplayControl"  value="{{addTaskForm.controls.PriorityControl.value}}">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3"></div>
+                    <div class="col-md-3">
+                        <!-- <div *ngIf="(addProjectForm.controls.priorityControl.touched && !addProjectForm.controls.priorityControl.valid)">
+                            <span class="glyphicon glyphicon-info-sign text-danger" aria-hidden="true" style="display:inline;"></span>
+                            <p class="text-danger" style="display:inline;">This is a required field</p>
+                        </div> -->
+                    </div>
                 </div>
-                <div class="row">
+                <div class="row"  *ngIf="addTaskForm.controls.IsParentTaskControl.value !== true">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="pTask">Parent Task:</label>
                         <div class="col-sm-6">
-                            <input class="form-control" id="pTask" placeholder="Select the Parent Task" [disabled]="true">
+                            <input class="form-control" id="pTask" placeholder="Select the Parent Task" readonly  value="{{selectedTask}}" formControlName="ParentTaskControl">
                         </div>
                         <div class="col-sm-2">
-                            <button type="button" class="btn btn-primary">Search</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchPTasksModal">Search</button>
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="addTaskForm.controls.IsParentTaskControl.value !== true">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="startDate">Start Date:</label>
                         <div class="col-md-8">
-                            <form [formGroup]="myForm" (ngSubmit)="onSubmit()" novalidate>
-                                <div class="input-group" [formGroup]="myForm">
-                                    <input class="form-control" style="float:none" placeholder="Select a date" ngx-mydatepicker name="myDate" formControlName="myDate"
-                                        [options]="myOptions" #dp="ngx-mydatepicker" />
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" (click)="dp.clearDate()">
-                                            <i class="glyphicon glyphicon-remove"></i>
-                                        </button>
-                                        <button type="button" class="btn btn-default" (click)="dp.toggleCalendar()">
-                                            <i class="glyphicon glyphicon-calendar"></i>
-                                        </button>
-                                    </span>
-                                </div>
-                                <div class="btnGroup">
-                                                                <button class="button" type="submit" [disabled]="myForm.controls.myDate.errors">Submit</button>
-                                                                <p class="error" *ngIf="myForm.controls.myDate.errors">Date is required!</p>
-                                                            </div> 
-                            </form>
+                            <div class="input-group">
+                                    <p-calendar  name="StartDateControl" formControlName="StartDateControl"   [showIcon]="true"></p-calendar>
+
+                           
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                
+                <div class="row" *ngIf="addTaskForm.controls.IsParentTaskControl.value !== true">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="endDate">End Date:</label>
                         <div class="col-md-8">
-                            <form [formGroup]="myForm" (ngSubmit)="onSubmit()" novalidate>
-                                <div class="input-group" [formGroup]="myForm">
-                                    <input class="form-control" style="float:none" placeholder="Select a date" ngx-mydatepicker name="myDate" formControlName="myDate"
-                                        [options]="myOptions" #dp="ngx-mydatepicker" />
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" (click)="dp.clearDate()">
-                                            <i class="glyphicon glyphicon-remove"></i>
-                                        </button>
-                                        <button type="button" class="btn btn-default" (click)="dp.toggleCalendar()">
-                                            <i class="glyphicon glyphicon-calendar"></i>
-                                        </button>
-                                    </span>
-                                </div>
-                            </form>
+                            <div class="input-group">
+                                    <p-calendar  name="EndDateControl" formControlName="EndDateControl"   [showIcon]="true"></p-calendar>
+
+                                
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="addTaskForm.controls.IsParentTaskControl.value !== true">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <label class="control-label col-sm-4" for="user">User:</label>
                         <div class="col-sm-6">
-                            <input class="form-control" id="user" placeholder="Select a user" [disabled]="true">
+                            <input class="form-control" id="user" placeholder="Select a user" readonly  value="{{selectedUser}}" formControlName="UserIdControl">
                         </div>
                         <div class="col-sm-2">
-                            <button type="button" class="btn btn-primary">Search</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchUsersModal">Search</button>
                         </div>
                     </div>
                     <div class="col-md-3"></div>
-                </div>              
+                </div>
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="form-group col-md-6">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <button type="button" class="btn btn-md btn-success">Update</button>
-                            <button type="button" class="btn btn-md btn-danger">Cancel</button>
+                            <button type="submit" [disabled]="addTaskForm.invalid" class="btn btn-md btn-success">{{btnMode}}</button>
+                            <button type="button" (click)="clearDate()"  class="btn btn-md btn-danger">Reset</button>
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
-</div> -->
+</div>
+
+<!-- Modal - Search Projects -->
+<div id="searchProjectsModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Search Projects</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p-dataTable [value]="projectsList">
+                            <p-column field="Project_ID" header="Project ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="ProjectName" header="Project Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Start_Date" header="Start Date" sortable="true" [filter]="true" filterMatchMode="contains"> <ng-template let-col let-project="rowData" let-ri="rowIndex" pTemplate="body">
+                                <span>{{project[col.field]|date:'dd/MM/yyyy'}}</span>
+                            </ng-template></p-column>
+                            <p-column field="End_Date" header="End Date" sortable="true" [filter]="true" filterMatchMode="contains"> <ng-template let-col let-project="rowData" let-ri="rowIndex" pTemplate="body">
+                                <span>{{project[col.field]|date:'dd/MM/yyyy'}}</span>
+                            </ng-template></p-column>
+                            <p-column field="Priority" header="Priority" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Manager_Name" header="Manager" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>                            
+                            <p-column>
+                                <ng-template let-project="rowData" pTemplate="body">
+                                    <div align="center">
+                                        <button type="button" class="btn btn-success btn-sm" id="assignProject" (click)="selectProject(project.ProjectName, project.Project_ID)" data-dismiss="modal">Select</button>
+                                    </div>
+                                </ng-template>
+                            </p-column>
+                        </p-dataTable>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal - Search Parent Tasks -->
+<div id="searchPTasksModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Search Parent Task</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p-dataTable [value]="parentTasksList">
+                            <p-column field="Parent_ID" header="Parent ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Parent_Name" header="Parent Task Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column>
+                                <ng-template let-pTask="rowData" pTemplate="body">
+                                    <div align="center">
+                                        <button type="button" class="btn btn-success btn-sm" id="assignProject" (click)="selectPTask(pTask.Parent_ID, pTask.Parent_Name)"
+                                            data-dismiss="modal">Select</button>
+                                    </div>
+                                </ng-template>
+                            </p-column>
+                        </p-dataTable>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- Modal - Search Users -->
+<div id="searchUsersModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Search Users</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p-dataTable [value]="usersList">
+                            <p-column field="User_ID" header="User ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="First_Name" header="First Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Last_Name" header="Last Name" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Employee_ID" header="Employee ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                            <p-column field="Project_ID" header="Project ID" sortable="true" [filter]="true" filterMatchMode="contains"></p-column>
+                          
+                            <p-column>
+                                <ng-template let-user="rowData" pTemplate="body">
+                                    <button type="button" class="btn btn-success btn-sm" id="assignUser" (click)="assignUser(user.User_ID, user.First_Name + ' ' + user.Last_Name)" data-dismiss="modal">Assign</button>
+                                </ng-template>
+                            </p-column>
+                        </p-dataTable>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
